Switch to common publish action, upgrade to Java 21, update Minestom core